Add Github Actions CI workflow

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         python-version: 3.11
     - name: Install dependencies
-      run: pip Install --upgrade pip
+      run: pip install --upgrade pip
     - name: Run tests
       run: python -m tests.test_app
 
